k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: host-info-flask-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: host-info-flask
  template:
    metadata:
      labels:
        app: host-info-flask
    spec:
      containers:
      - name: fhost-info-flask
        image: ghcr.io/salehparsa/host-info-flask:v.b75ab62
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "256m"
          limits:
            memory: "512Mi"
            cpu: "512m"
