k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: host-info-flask-service
spec:
  selector:
    app: host-info-flask
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
